hard-gists/535acf4c62ee2a71da498281c2dfc4f4/run.log
=== Docker Run Log for 535acf4c62ee2a71da498281c2dfc4f4 ===
Started at: Mi 29. Okt 15:37:33 CET 2025

[2025-10-29 15:37:34] START: Running container for 535acf4c62ee2a71da498281c2dfc4f4
[2025-10-29 15:37:34] SUCCESS: Container fea5d795ff4dd3106aa0dcea4b5fd7398ba4a4844228f0b1792b3944f139b696 started for 535acf4c62ee2a71da498281c2dfc4f4
=== Container logs for 535acf4c62ee2a71da498281c2dfc4f4 ===
  File "/snippet.py", line 118
    print '=====\nBATCH {}\n===='.format(batch)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 535acf4c62ee2a71da498281c2dfc4f4 ===
[2025-10-29 15:37:36] INFO: Container fea5d795ff4dd3106aa0dcea4b5fd7398ba4a4844228f0b1792b3944f139b696 has stopped
